# CGLab

./: CMakeLists.txt  README.md
GeomShader/: CMakeLists.txt  frag.glsl  geom.glsl  main.cpp  vert.glsl
PerlinNoise/: fshader.glsl  main.cpp  noise.h
common/: config.cmake
framebuffer2d/: CMakeLists.txt  fb_fshader.glsl  fb_vshader.glsl  main.cpp  quad_fshader.glsl  quad_vshader.glsl
framebuffer2d/Triangle/: Triangle.h  fshader.glsl  vshader.glsl
glsl/: CMakeLists.txt  fshader.glsl  main.cpp  vshader.glsl
mouse/: line_fshader.glsl  main.cpp
rasterize/: CMakeLists.txt  main.cpp
raytrace/: CMakeLists.txt  main.cpp  main_28.cpp  oop.cpp  shadows.cpp  temp.cpp
raytrace/Separated/: camera.cpp  camera.h  imageplane.cpp  imageplane.h  lightsource.cpp  lightsource.h  main.cpp  obj.cpp  obj.h  objs.cpp  objs.h  plane.cpp  plane.h  ray.cpp  ray.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
terrains/: main.cpp  terrain_fshader.glsl  terrain_vshader.glsl
vector/: CMakeLists.txt  main.cpp  vector.cpp  vector.h
virtuallandscape/: CMakeLists.txt  loadTexture.h  main.cpp  noise.h  terrain_fshader.glsl  terrain_vshader.glsl
